infra/traefik/configs/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  addresses:
    - type: IPAddress
      value: 10.0.0.20
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: web
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.k8s.garden'
    name: websecure
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard-k8s-garden-tls
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.noreplay.org'
    name: websecure-noreplay
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: wildcard-noreplay-org-tls
      mode: Terminate
